rm sm struct, new endpoint for swagger
